<resources>
    <string name="app_name">Sabor a U</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    //Textos de la pagina de seleccion
    <string name="boton_almuerzos">Almuerzos</string>
    <string name="boton_desayunos">Desayunos</string>
    <string name="boton_cenas">Cenas</string>
    <string name="boton_iniciar_sesion">Iniciar Sesión</string>
    <string name="boton_cerrar_sesion">Cerrar Sesión</string>
    <string name="boton_registro">Crear una cuenta</string>
    <string name="boton_recuperar_contrasena">¿Olvidó su contraseña?</string>
    <string name="boton_home">Principal</string>
    <string name="label_inicio">¿Aún no sabes que comer?</string>

    <string name="title_activity_solicitar_servicio_alimentacion">Sabor a U</string>

    <string name="texto_plato_dia">Plato del día</string>
    <string name="texto_plato_opcional">Plato opcional</string>

    <string name="title_activity_solicitar_servicio_plato_dia">Sabor a U</string>

    <string name="texto_observaciones">Observaciones: </string>
    <string name="texto_cantidad">Cantidad: </string>

    <string name="texto_boton_solicitud">Solicitar</string>
    <string name="title_activity_historial">Sabor a U</string>
    <string name="boton_historial">Historial de Pedidos</string>
    <string name="title_activity_detalles_pedido">Sabor a U</string>
    <string name="informacion_detalles_pedido">Información de los platillos incluidos:</string>
    <string name="detalles_pedido">Detalles del pedido:</string>
    <string name="boton_cancelar_pedido">Cancelar</string>
    <string name="title_activity_modificar_pedido">Sabor a U</string>
    <string name="texto_botn_modificar">Modificar</string>

    <string name="text_menu_general">Menú General</string>

    <!-- Datos de usuario -->
    <string name="nombre_usuario">Nombre</string>
    <string name="primer_apellido_usuario">Primer Apellido</string>
    <string name="segundo_apellido_usuario">Segundo Apellido</string>
    <string name="direccion_correo">Correo</string>
    <string name="password">Password</string>
    <string name="confirmar_password">Confirmar Password</string>
    <string name="texto_boton_registrar">Registrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
