<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.soda.proyecto.saborau.controller.DetallesPedidoFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvEstadoPedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvFechaPedido"
            android:layout_alignStart="@+id/tvFechaPedido"
            android:layout_below="@+id/tvFechaPedido"
            android:layout_marginTop="24dp"
            android:text="TextView"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tvFechaPedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="TextView"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvEstadoPedido"
            android:layout_marginTop="19dp"
            android:text="@string/informacion_detalles_pedido"
            android:textColor="@android:color/background_dark"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:text="@string/detalles_pedido"
            android:textColor="@color/colorPrimary"
            android:textSize="24dp"
            android:layout_below="@+id/btnModificarPedido"
            android:layout_centerHorizontal="true" />

        <ListView
            android:id="@+id/historialView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="18dp" />

        <Button
            android:id="@+id/btnCancelarPedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/boton_cancelar_pedido"
            android:textColor="@color/texto_blanco"
            android:textSize="18dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_alignBaseline="@+id/btnModificarPedido"
            android:layout_alignBottom="@+id/btnModificarPedido"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/btnModificarPedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/texto_botn_modificar"
            android:textColor="@color/texto_blanco"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="14dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</FrameLayout>
